--- a/app/views/hooks/_view_issue.html.erb
+++ b/app/views/hooks/_view_issue.html.erb
@@ -1,14 +1,14 @@
 <% unless @issue.disabled_core_fields.include?('filed_version_id') %>
-<tr>
-	<td><b><%= l(:field_filed_version) %>:</b></td>
-  <td>
-	  <% if @issue.filed_version && @issue.filed_version.closed? %>
-	  <strike>
-	  <% end %>
-	  <%= (@issue.filed_version ? link_to_version(@issue.filed_version) : "-") %>
-	  <% if @issue.filed_version && @issue.filed_version.closed? %>
-	  </strike>
-	  <% end %>
-  </td>
-</tr>
+		<div class="attribute">
+			<div class="label"><%= l(:field_filed_version) %>:</div>
+			<div class="value">
+				<% if @issue.filed_version && @issue.filed_version.closed? %>
+				<strike>
+					<% end %>
+					<%= (@issue.filed_version ? link_to_version(@issue.filed_version) : "-") %>
+					<% if @issue.filed_version && @issue.filed_version.closed? %>
+				</strike>
+				<% end %>
+			</div>
+    </div>
 <% end %>
